--- a/css/index.css
+++ b/css/index.css
@@ -29,19 +29,13 @@ body {
   background: var(--clr);
 }
 
-.header {
-  width: 100%;
-  height: 50px;
-  background-color: var(--clr);
-}
-
 .menuToggle {
   position: absolute;
   top: 4px;
-  left: 10px;
+  right: 10px;
   width: 40px;
   min-height: 40px;
-  background: rgb(226, 166, 166);;
+  background: rgb(158, 95, 95);
   border-radius: 2px;
   z-index: 1000;
   cursor: pointer;
