--- a/css/index.css
+++ b/css/index.css
@@ -80,11 +80,17 @@ body {
 
 .sidebar {
   position: absolute;
-  width: 300px;
+  width: 0px;
   height: 100vh;
   background: rgb(158, 95, 95);
   transition: 0.5s;
-  padding-left: 20px;
+  padding-left: 0px;
+  overflow: hidden;
+}
+
+.sidebar.active {
+  width: 250px;
+  padding-left: 10px;
 }
 
 .sidebar ul {
@@ -122,14 +128,14 @@ body {
   justify-content: center;
   align-items: center;
   min-width: 60px;
-  height: 70px;
+  height: 50px;
   font-size: 1.5em;
   color: white;
 }
 
 .sidebar ul li a .text {
   position: relative;
-  height: 70px;
+  height: 50px;
   display: flex;
   align-items: center;
   font-size: 1em;
@@ -138,4 +144,10 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.05em;
   transition: 0.5s;
+}
+
+.sidebar ul li:hover a .icon,
+.sidebar ul li:hover a .text {
+  color: rgb(226, 166, 166);
+  
 }
