--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
 }
 
 :root {
-    --clr: rgb(226, 166, 166);
+  --clr: rgb(226, 166, 166);
 }
 
 body {
@@ -107,7 +107,6 @@ body {
   background: white;
   border-top-left-radius: 40px;
   border-bottom-left-radius: 40px;
-
 }
 
 .sidebar ul li.logo {
@@ -174,4 +173,53 @@ body {
     font-size: 2.5em;
     letter-spacing: 3px;
   }
+}
+
+.container {
+  padding-top: 60px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container .title {
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  color: white;
+  font-size: 1.8em;
+  text-transform: uppercase;
+  font-family: "Gruppo-Regular";
+  font-weight: 100;
+  letter-spacing: 5px;
+}
+
+.container .content {
+  padding-top: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.container .content .image {
+  width: 100%;
+  height: 250px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.container .content .image img {
+  width: 100%;
+}
+
+.container .content .textsc {
+  padding-bottom: 15px;
+  font-size: 0.8em;
+  font-weight: 900;
+  color: rgb(158, 95, 95);
+  text-transform: uppercase;
+}
+
+.container .content .textc {
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
