--- a/css/index.css
+++ b/css/index.css
@@ -225,3 +225,9 @@ body {
   padding-top: 20px;
   padding-bottom: 10px;
 }
+
+@media only screen and (min-width: 768px) {
+  .container .content {
+    padding: 20px 300px 20px 300px;
+  }
+}
