--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,7 @@ body {
 .sidebar {
   position: absolute;
   width: 0px;
-  height: 100vh;
+  height: 110vh;
   background: rgb(158, 95, 95);
   transition: 0.5s;
   padding-left: 0px;
@@ -224,10 +224,63 @@ body {
 .container .content .textc {
   padding-top: 20px;
   padding-bottom: 10px;
+  font-size: 1.4em;
+}
+
+@media only screen and (min-width: 640px) {
+  .container .content {
+    padding: 20px 130px 20px 130px;
+  }
+  .container .title {
+    text-align: center;
+    font-size: 2.1em;
+    font-weight: 300;
+    letter-spacing: 6px;
+  }
+  .container .content .textsc {
+    font-size: 0.9em;
+  }
+  
+  .container .content .textc {
+    font-size: 1.6em;
+  }
+  
 }
 
 @media only screen and (min-width: 768px) {
   .container .content {
-    padding: 20px 300px 20px 300px;
+    padding: 20px 100px 20px 100px;
+  }
+  .container .title {
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: 500;
+    letter-spacing: 7px;
+  }
+  .container .content .textsc {
+    font-size: 1em;
+  }
+  
+  .container .content .textc {
+    font-size: 2em;
+  }
+  
+}
+
+@media only screen and (min-width: 1080px) {
+  .container .content {
+    padding: 20px 200px 20px 200px;
+  }
+  .container .title {
+    text-align: center;
+    font-size: 3.5em;
+    font-weight: 600;
+  }
+  .container .content .textsc {
+    font-size: 1.2em;
+  }
+  
+  .container .content .textc {
+    font-size: 2.5em;
   }
 }
