--- a/css/index.css
+++ b/css/index.css
@@ -90,6 +90,10 @@ body {
   overflow-y: scroll;
 }
 
+.sidebar::-webkit-scrollbar {
+  display: none;
+}
+
 .sidebar.active {
   width: 250px;
   padding-left: 10px;
@@ -186,6 +190,10 @@ body {
   overflow: scroll;
 }
 
+.container::-webkit-scrollbar {
+  display: none;
+}
+
 .container .title {
   padding-left: 20px;
   padding-right: 20px;
@@ -277,7 +285,7 @@ body {
   }
   .container .title {
     text-align: center;
-    font-size: 3.5em;
+    font-size: 3em;
     font-weight: 600;
   }
   .container .content .textsc {
